# Xe-Release-Qt

./: .gitignore  README.md
XeRelease_Qt5/: CMakeLists.txt  CMakeLists.txt.user.08715ef  CMakeLists.txt.user.47ad2fc  CMakeLists.txt.user.85a20ec  mainwindow.cpp  mainwindow.ui  xe_resource.qrc
XeRelease_Qt5/res/: XeRelease_Resources.qrc
XeRelease_Qt5/src/: branchdialog.cc  branchdialog.h  branchdialog.ui  mainwindow.cc  mainwindow.h  mainwindow.ui  xerelease.cc
XeRelease_Qt6/: CMakeLists.txt  xe_resource.qrc
XeRelease_Qt6/src/: branchdialog.cc  branchdialog.h  branchdialog.ui  mainwindow.ui  xerelease.cc  xerelease.hh
